--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,11 +1,16 @@
 {
   "addItem": "Add Item",
+  "addDragHandle": "Add Drag Handle",
+  "addDragHandleTooltip": "Add a new drag handle to the workspace",
   "addNewObject": "Add new object from URL",
+  "addDuplicateWindow": "Add Duplicate Window",
   "addSlotAbove": "Add Slot Above",
   "addSlotBelow": "Add Slot Below",
   "addSlotLeft": "Add Slot Left",
   "addSlotRight": "Add Slot Right",
   "addTagsHere": "Add tags here",
+  "addWindow": "Add Window",
+  "addWindowTooltip": "Add a blank window to the workspace",
   "annotationTooltip": "Toggle annotations",
   "attribution": "Attribution",
   "bookmark": "Bookmark",
